[package]
name = "crucible"
version = "0.1.0"
edition = "2021"

[lib]
name = "crucible"
path = "src/lib.rs"

[[bin]]
name = "crucible"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.12.12"
scraper = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
